--- a/Jenkin_test/pom.xml
+++ b/Jenkin_test/pom.xml
@@ -118,6 +118,7 @@
 		</dependency>        
 	</dependencies>
     <build>
+    <finalName>Jenkin_test</finalName>
     <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
